<resources>
    <string name="app_name">Trigonic</string>
    <string name="title_home">Trang Chủ</string>
    <string name="title_sell">Đăng Bán</string>
    <string name="title_cart">Giỏ Hàng</string>
    <string name="title_profile">Thông Tin</string>
    <string name="title_popular">Phổ biến</string>
    <string name="title_men">Nam</string>
    <string name="title_women">Nữ</string>
    <string name="button_login">ĐĂNG NHẬP</string>
    <string name="button_register">ĐĂNG KÍ</string>
    <string name="quote_sell">Tham gia bán hàng bằng cách đăng nhập hoặc đăng ký. Chỉ những người bán được chấp thuận mới được phép tham gia bán hàng</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_shared_prefs">logged</string>
    <string name="name_shared_prefs">name</string>
    <string name="phone_shared_prefs">phone</string>
    <string name="address_shared_prefs">address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shipping_description">Giao Hàng MIỄN PHÍ Áp dụng cho các đơn hàng từ 2.000.000 đ trở lên. Miễn phí cho các thành viên TRIGONIC +.</string>
    <string name="product_description">Lấy cảm hứng từ vnorfly, Nike Zoom Fly 3 mang đến cho người chạy bộ sự thoải mái và độ bền bỉ trên mọi nẻo đường. Sức mạnh thấm hút từ sợi carbon giữ cho bạn khô thoáng đôi chân.</string>
    <string name="btn_add_to_cart">THÊM VÀO GIỎ HÀNG</string>
    <string name="placeholder_coupon">Mã giảm giá</string>
    <string name="button_apply">Áp dụng</string>
    <string name="title_Total">Tổng cộng</string>
    <string name="text_include_cost">Đã bao gồm chi phí dịch vụ</string>
    <string name="button_proceed_order">Tiến hành đặt hàng</string>
    <string name="title_submit_product">Đăng bán sản phẩm</string>
    <string name="text_branch">Nhãn hiêu</string>
    <string name="text_product_name">Tên sản phẩm</string>
    <string name="text_condition">Tình trạng</string>
    <string name="text_fee">Chi Phí</string>
    <string name="button_submit_product">Đăng bán</string>
    <string name="button_add_photos">thêm ảnh</string>
    <string name="placeholder_product_name">Tên sản phẩm</string>
    <string name="placeholder_condition">Tình trạng</string>
    <string name="placeholder_size">Size</string>
    <string name="placeholder_price">Giá</string>
    <string name="image_picker_toolbar_title">Hình ảnh cho sản phẩm</string>
    <string name="description_selling">Đăng bán bằng cách thêm hình ảnh sản phẩm của bạn</string>
    <string name="TAB_PROFILE_NAME">Thông Tin</string>
    <string name="PROFILE_TITLE">Chào Mừng Bạn Đến Với Trigonic</string>
    <string name="PROFILE_TITLE2">Đăng Nhập/Đăng Kí</string>
    <string name="placeholder_password">Mật Khẩu</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_name">Họ và Tên</string>
    <string name="placeholder_phone">Số điện thoại</string>
    <string name="placeholder_repassword">Nhập lại Mật Khẩu</string>
    <string name="button_logout">Đăng Xuất</string>
    <string name="title_product_detail">Chi tiết sản phẩm</string>
    <string name="helper_condition">/10</string>
    <string name="helper_size">Size EU</string>
    <string name="title_fee">Phí dịch vụ</string>
    <string name="placeholder_address">Địa chỉ</string>
    <string name="title_sellproduct">Sản phẩm đã đăng</string>
    <string name="title_order">Đặt hàng</string>
    <string name="radio_cash_on_delivery">Thanh toán tiền mặt khi nhận hàng</string>
    <string name="radio_momo_payment">Thanh toán bằng ví MoMo</string>
    <string name="text_delivery_address">Địa chỉ giao hàng</string>
    <string name="text_payment_type">Hình thức thanh toán</string>
    <string name="button_order">Đặt hàng</string>
    <string name="placeholder_receiver_name">Người nhận</string>
    <string name="title_order_pending">Đang xác nhận</string>
    <string name="title_order_delivering">Đang giao</string>
    <string name="title_order_completed">Đã giao</string>
    <string name="title_order_canceled">Đã huỷ</string>
    <string name="title_order_history">Đơn hàng</string>
    <string name="button_cancel_order">Huỷ đơn</string>
    <string name="title_order_detail">Chi tiết đơn hàng</string>
    <string name="title_delivery_information">Thông tin giao hàng</string>
    <string name="title_payment_information">Thông tin thanh toán</string>
    <string name="text_order_date">Ngày đặt hàng</string>
    <string-array name="query_suggestions">
        <item>Jordan Proto-Max 720</item>
        <item>Nike Air Monarch IV</item>
        <item>Nike Air Barrage Mid</item>
        <item>Nike Air Max 720 SATRN</item>
        <item>Nike React Element 55</item>
        <item>Nike SF Air Force Hi</item>
        <item>Air Jordan 14 Retro SE</item>
        <item>Air Jordan XXXIII</item>
        <item>Nike Air Max 270 React</item>
        <item>Jordan Ultra Fly 3 Low</item>
        <item>Air Jordan 1 Retro Low S</item>
        <item>Air Jordan 1 Retro High</item>
        <item>Nike M2k Tenko SE</item>
        <item>Nike React Element 55</item>
        <item>NikeCourt Royale AC</item>
        <item>Nike Air Max FF 720</item>
        <item>Nike Air Max 90</item>
        <item>Nike Blazer Mid By You</item>
        <item>Nike Air Max 270</item>
        <item>Air Jordan 1 Retro Low S</item>
    </string-array>
</resources>
