<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderHistoryActivity">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:title="@string/title_order_history"
            />

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/mid_navigation"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="bottom"
            android:layout_below="@+id/toolbar"
            android:background="@android:color/transparent"
            app:tabTextColor="?colorOnSurface"
            app:tabSelectedTextColor="?colorPrimary"
            app:tabIndicatorColor="?colorPrimary"
            app:tabMode="scrollable"
            >
        <com.google.android.material.tabs.TabItem
                android:text="@string/title_order_pending"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"/>
        <com.google.android.material.tabs.TabItem
                android:text="@string/title_order_delivering"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"/>
        <com.google.android.material.tabs.TabItem
                android:text="@string/title_order_completed"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"/>
        <com.google.android.material.tabs.TabItem
                android:text="@string/title_order_canceled"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
            android:id="@+id/order_history_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/mid_navigation"
            />

</RelativeLayout>