<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderActivity"
        android:focusableInTouchMode="true"
        >

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:title="@string/title_order"
            android:layout_alignParentTop="true"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/toolbar"
            android:layout_above="@+id/btnOrder"
            >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_delivery_address"
                />

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/placeholder_receiver_name"
                app:errorEnabled="true"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/placeholder_phone"
                app:errorEnabled="true"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/placeholder_address"
                app:errorEnabled="true"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_payment_type"
                />

        <RadioGroup
                android:checkedButton="@+id/enabled_selected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RadioButton
                    android:id="@+id/enabled_selected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:enabled="true"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/radio_cash_on_delivery"/>
            <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/radio_momo_payment"/>
        </RadioGroup>

    </LinearLayout>
    <Button
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_order"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />

</RelativeLayout>