<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GuestSellFragment"
        >

    <TextView
            android:id="@+id/txtQuote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quote_sell"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.7"
            android:layout_marginTop="60dp"
            android:textAlignment="center"
            android:textSize="18sp"
            />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            app:layout_constraintTop_toBottomOf="@+id/txtQuote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.6"
            android:layout_marginTop="300dp"
            />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.6"
            android:layout_marginTop="20dp"
            />

</androidx.constraintlayout.widget.ConstraintLayout>