<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="#ffffff"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.synnapps.carouselview.CarouselView
                    android:id="@+id/carouselView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:fillColor="#FFFFFFFF"
                    app:pageColor="#00000000"
                    app:radius="6dp"
                    app:slideInterval="3000"
                    app:strokeColor="#FF777777"
                    app:strokeWidth="1dp"/>

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/mid_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <com.google.android.material.tabs.TabItem
                    android:text="@string/title_popular"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                    android:text="@string/title_men"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                    android:text="@string/title_women"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"/>
        </com.google.android.material.tabs.TabLayout>

            <FrameLayout
                    android:id="@+id/fragment_product_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

</androidx.core.widget.NestedScrollView>