<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:tools="http://schemas.android.com/tools"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       android:orientation="vertical"
                                       tools:context=".SubmitProductFragment">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:elevation="4dp"
                app:title="@string/title_submit_product"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/toolbar"
                >

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    />

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    app:boxBackgroundColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/placeholder_product_name"
                    app:errorEnabled="true"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    >

                <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_branch"
                        android:layout_marginTop="5dp"
                        android:textSize="25sp"
                        android:textColor="#000000"
                        />

                <Spinner
                        android:layout_width="280dp"
                        android:layout_height="45dp"
                        android:id="@+id/brand"
                        >
                </Spinner>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        app:boxBackgroundColor="#fff"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:layout_margin="4dp"
                        android:hint="@string/placeholder_condition"
                        app:errorEnabled="true"
                        >

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtCondition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal|numberSigned"
                            />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        app:boxBackgroundColor="#fff"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:layout_margin="4dp"
                        android:hint="@string/placeholder_size"
                        app:errorEnabled="true"
                        >

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal|numberSigned"
                            />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/placeholder_price"
                    app:errorEnabled="true"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textAlignment="textEnd"
                        />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_submit_product"
                    />
        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>